Fix ui::Gpu async to sync transition.

iThere is a bug in ui::Gpu when EstablishGpuChannel() is called and then
before the response from the request arrives EstablishGpuChannelSync()
is called. The desired behaviour is that EstablishGpuChannelSync() will
block and when response arrives, the callback(s) from
EstablishGpuChannel() will fire and then EstablishGpuChannelSync() will
return. Instead, a second request is sent when EstablishGpuChannelSync()
is called. This will crash later when the second GPU channel request
finishes.

In order to accomplish this part of ui::Gpu has to live on the IO
thread. ui::mojom::Gpu is bound to the IO thread, so that the response
from EstablishGpuChannel() is received on the IO thread. This allows the
main thread to block waiting for a response. This is similar to how
BrowserGpuChannelHostFactory works.

Bug: 781886
Change-Id: I9b1f7c3c8f145dad6940e9338c50c1c14382fc31