services/ui/public/cpp/gpu/gpu.cc
@@ -31,27 +31,142 @@ mojom::GpuPtr DefaultFactory(service_manager::Connector* connector,
 
 }  // namespace
 
+// Encapsulates a single request to establish a GPU channel.
+class Gpu::EstablishRequest
+    : public base::RefCountedThreadSafe<Gpu::EstablishRequest> {
+ public:
+  EstablishRequest(Gpu* parent,
+                   scoped_refptr<base::SingleThreadTaskRunner> main_task_runner)
+      : parent_(parent), main_task_runner_(main_task_runner) {}
+
+  int client_id() { return client_id_; }
+  mojo::ScopedMessagePipeHandle& channel_handle() { return channel_handle_; }
+  gpu::GPUInfo& gpu_info() { return gpu_info_; }
+  gpu::GpuFeatureInfo& gpu_feature_info() { return gpu_feature_info_; }
+
+  // Sends EstablishGpuChannel() request using |gpu|. This must be called from
+  // the IO thread so that the response is handled on the IO thread.
+  void SendRequest(scoped_refptr<ui::mojom::ThreadSafeGpuPtr> gpu) {
+    DCHECK(!main_task_runner_->BelongsToCurrentThread());
+    base::AutoLock lock(lock_);
+
+    if (finished_)
+      return;
+
+    (*gpu)->EstablishGpuChannel(
+        base::Bind(&EstablishRequest::OnEstablishedGpuChannel, this));
+  }
+
+  // Sets a WaitableEvent so the main thread can block for a synchronous
+  // request. This must be called from main thread.
+  void SetWaitableEvent(base::WaitableEvent* establish_event) {
+    DCHECK(main_task_runner_->BelongsToCurrentThread());
+    base::AutoLock mutex(lock_);
+
+    // If we've already received a response then don't reset |establish_event|.
+    // The caller won't block and will immediately process the response.
+    if (received_)
+      return;
+
+    establish_event_ = establish_event;
+    establish_event_->Reset();
+  }
+
+  // Cancels the pending request. Any asynchronous calls back into this object
+  // will return early and do nothing. This must be called from main thread.
+  void Cancel() {
+    DCHECK(main_task_runner_->BelongsToCurrentThread());
+    base::AutoLock lock(lock_);
+    DCHECK(!finished_);
+    finished_ = true;
+  }
+
+  // This must be called after OnEstablishedGpuChannel() from the main thread.
+  void FinishOnMain() {
+    // No lock needed, everything will run on |main_task_runner_| now.
+    DCHECK(main_task_runner_->BelongsToCurrentThread());
+    DCHECK(received_);
+
+    if (finished_)
+      return;
+
+    finished_ = true;
+    // |this| might be deleted when running Gpu::OnEstablishedGpuChannel().
+    parent_->OnEstablishedGpuChannel();
+  }
+
+ protected:
+  friend class base::RefCountedThreadSafe<Gpu::EstablishRequest>;
+
+  virtual ~EstablishRequest() = default;
+
+  void OnEstablishedGpuChannel(int client_id,
+                               mojo::ScopedMessagePipeHandle channel_handle,
+                               const gpu::GPUInfo& gpu_info,
+                               const gpu::GpuFeatureInfo& gpu_feature_info) {
+    DCHECK(!main_task_runner_->BelongsToCurrentThread());
+    base::AutoLock lock(lock_);
+
+    // Do nothing if Cancel() was called.
+    if (finished_)
+      return;
+
+    DCHECK(!received_);
+    received_ = true;
+
+    client_id_ = client_id;
+    channel_handle_ = std::move(channel_handle);
+    gpu_info_ = gpu_info;
+    gpu_feature_info_ = gpu_feature_info;
+
+    if (establish_event_) {
+      // Gpu::EstablishGpuChannelSync() was called. Unblock the main thread and
+      // let it finish.
+      establish_event_->Signal();
+    } else {
+      main_task_runner_->PostTask(
+          FROM_HERE, base::Bind(&EstablishRequest::FinishOnMain, this));
+    }
+  }
+
+  Gpu* const parent_;
+  scoped_refptr<base::SingleThreadTaskRunner> main_task_runner_;
+  base::WaitableEvent* establish_event_ = nullptr;
+
+  base::Lock lock_;
+  bool received_ = false;
+  bool finished_ = false;
+
+  int client_id_;
+  mojo::ScopedMessagePipeHandle channel_handle_;
+  gpu::GPUInfo gpu_info_;
+  gpu::GpuFeatureInfo gpu_feature_info_;
+
+  DISALLOW_COPY_AND_ASSIGN(EstablishRequest);
+};
+
 Gpu::Gpu(GpuPtrFactory factory,
          scoped_refptr<base::SingleThreadTaskRunner> task_runner)
     : main_task_runner_(base::ThreadTaskRunnerHandle::Get()),
       io_task_runner_(std::move(task_runner)),
-      factory_(std::move(factory)),
       shutdown_event_(base::WaitableEvent::ResetPolicy::AUTOMATIC,
                       base::WaitableEvent::InitialState::NOT_SIGNALED) {
   DCHECK(main_task_runner_);
+  DCHECK(io_task_runner_);
+
+  gpu_ptr_ = mojom::ThreadSafeGpuPtr::Create(factory.Run().PassInterface(),
+                                             io_task_runner_);
   gpu_memory_buffer_manager_ =
-      base::MakeUnique<ClientGpuMemoryBufferManager>(factory_.Run());
-  if (!io_task_runner_) {
-    io_thread_.reset(new base::Thread("GPUIOThread"));
-    base::Thread::Options thread_options(base::MessageLoop::TYPE_IO, 0);
-    thread_options.priority = base::ThreadPriority::NORMAL;
-    CHECK(io_thread_->StartWithOptions(thread_options));
-    io_task_runner_ = io_thread_->task_runner();
-  }
+      std::make_unique<ClientGpuMemoryBufferManager>(factory.Run());
 }
 
 Gpu::~Gpu() {
   DCHECK(IsMainThread());
+  if (pending_request_) {
+    pending_request_->Cancel();
+    pending_request_ = nullptr;
+  }
+  gpu_ptr_ = nullptr;
   shutdown_event_.Signal();
   if (gpu_channel_)
     gpu_channel_->DestroyChannel();
@@ -94,17 +209,14 @@ scoped_refptr<viz::ContextProvider> Gpu::CreateContextProvider(
 void Gpu::CreateJpegDecodeAccelerator(
     media::mojom::GpuJpegDecodeAcceleratorRequest jda_request) {
   DCHECK(IsMainThread());
-  if (!gpu_ || !gpu_.is_bound())
-    gpu_ = factory_.Run();
-  gpu_->CreateJpegDecodeAccelerator(std::move(jda_request));
+  (*gpu_ptr_)->CreateJpegDecodeAccelerator(std::move(jda_request));
 }
 
 void Gpu::CreateVideoEncodeAcceleratorProvider(
     media::mojom::VideoEncodeAcceleratorProviderRequest vea_provider_request) {
   DCHECK(IsMainThread());
-  if (!gpu_ || !gpu_.is_bound())
-    gpu_ = factory_.Run();
-  gpu_->CreateVideoEncodeAcceleratorProvider(std::move(vea_provider_request));
+  (*gpu_ptr_)->CreateVideoEncodeAcceleratorProvider(
+      std::move(vea_provider_request));
 }
 
 void Gpu::EstablishGpuChannel(
@@ -116,16 +228,8 @@ void Gpu::EstablishGpuChannel(
     return;
   }
 
-  const bool gpu_channel_request_ongoing = !establish_callbacks_.empty();
-  // Cache |callback| but don't launch more than one EstablishGpuChannel().
   establish_callbacks_.push_back(callback);
-  if (gpu_channel_request_ongoing)
-    return;
-
-  if (!gpu_ || !gpu_.is_bound())
-    gpu_ = factory_.Run();
-  gpu_->EstablishGpuChannel(
-      base::Bind(&Gpu::OnEstablishedGpuChannel, base::Unretained(this)));
+  SendEstablishGpuChannelRequest();
 }
 
 scoped_refptr<gpu::GpuChannelHost> Gpu::EstablishGpuChannelSync(
@@ -133,25 +237,17 @@ scoped_refptr<gpu::GpuChannelHost> Gpu::EstablishGpuChannelSync(
   DCHECK(IsMainThread());
   if (connection_error)
     *connection_error = false;
-  if (GetGpuChannel())
-    return gpu_channel_;
-  if (!gpu_ || !gpu_.is_bound())
-    gpu_ = factory_.Run();
 
-  int client_id = 0;
-  mojo::ScopedMessagePipeHandle channel_handle;
-  gpu::GPUInfo gpu_info;
-  gpu::GpuFeatureInfo gpu_feature_info;
-  mojo::SyncCallRestrictions::ScopedAllowSyncCall allow_sync_call;
-  if (!gpu_->EstablishGpuChannel(&client_id, &channel_handle, &gpu_info,
-                                 &gpu_feature_info)) {
-    DLOG(WARNING) << "Encountered error while establishing gpu channel.";
-    if (connection_error)
-      *connection_error = true;
-    return nullptr;
-  }
-  OnEstablishedGpuChannel(client_id, std::move(channel_handle), gpu_info,
-                          gpu_feature_info);
+  scoped_refptr<gpu::GpuChannelHost> channel = GetGpuChannel();
+  if (channel)
+    return channel;
+
+  SendEstablishGpuChannelRequest();
+  base::WaitableEvent event(base::WaitableEvent::ResetPolicy::MANUAL,
+                            base::WaitableEvent::InitialState::SIGNALED);
+  pending_request_->SetWaitableEvent(&event);
+  event.Wait();
+  pending_request_->FinishOnMain();
 
   return gpu_channel_;
 }
@@ -169,23 +265,34 @@ scoped_refptr<gpu::GpuChannelHost> Gpu::GetGpuChannel() {
   return gpu_channel_;
 }
 
-void Gpu::OnEstablishedGpuChannel(int client_id,
-                                  mojo::ScopedMessagePipeHandle channel_handle,
-                                  const gpu::GPUInfo& gpu_info,
-                                  const gpu::GpuFeatureInfo& gpu_feature_info) {
+void Gpu::SendEstablishGpuChannelRequest() {
+  if (pending_request_)
+    return;
+
+  pending_request_ =
+      base::MakeRefCounted<EstablishRequest>(this, main_task_runner_);
+  io_task_runner_->PostTask(
+      FROM_HERE,
+      base::Bind(&EstablishRequest::SendRequest, pending_request_, gpu_ptr_));
+}
+
+void Gpu::OnEstablishedGpuChannel() {
   DCHECK(IsMainThread());
-  DCHECK(gpu_.get());
+  DCHECK(pending_request_);
   DCHECK(!gpu_channel_);
 
-  if (client_id && channel_handle.is_valid()) {
+  if (pending_request_->client_id() &&
+      pending_request_->channel_handle().is_valid()) {
     gpu_channel_ = gpu::GpuChannelHost::Create(
-        this, client_id, gpu_info, gpu_feature_info,
-        IPC::ChannelHandle(channel_handle.release()), &shutdown_event_,
-        gpu_memory_buffer_manager_.get());
+        this, pending_request_->client_id(), pending_request_->gpu_info(),
+        pending_request_->gpu_feature_info(),
+        IPC::ChannelHandle(pending_request_->channel_handle().release()),
+        &shutdown_event_, gpu_memory_buffer_manager_.get());
   }
+  pending_request_ = nullptr;
 
-  auto callbacks = std::move(establish_callbacks_);
-  establish_callbacks_.clear();
+  std::vector<gpu::GpuChannelEstablishedCallback> callbacks;
+  callbacks.swap(establish_callbacks_);
   for (const auto& callback : callbacks)
     callback.Run(gpu_channel_);
 }
